labs/networking/calico-lab-exercise/demo/20-egress-access-controls/deny-nginx.yaml
---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: deny-nginx
  namespace: calico-demo
spec:
  selector: app == 'nginx'
  types:
  - Ingress
  ingress:
  - action: Deny
    protocol: TCP
    source:
      selector: app == 'pwsh'
