labs/networking/calico-lab-exercise/demo/20-egress-access-controls/security.dns-policy.netset.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.allow-azure-access
spec:
  # requires security tier
  tier: security
  selector: (app == "centos" && projectcalico.org/namespace == "dev")
  order: 200
  types:
    - Egress
  egress:
  - action: Allow
    protocol: UDP
    source: {}
    destination:
      ports:
      - '53'
  - action: Allow
    destination:
      selector: type == "external-apis"
  - action: Pass
    source: {}
    destination: {}
